[gd_scene load_steps=8 format=3 uid="uid://d1qmnpkoxy3hj"]

[ext_resource type="Script" uid="uid://d3secv4mmh036" path="res://addons/CustomControls/Dialogs/palette_dialog.gd" id="1_aw083"]
[ext_resource type="Script" uid="uid://d0kowhkcjb7kv" path="res://addons/CustomControls/custom_option_button.gd" id="2_7oefs"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_quwjl"]
bg_color = Color(0.32549, 0.337255, 0.345098, 1)
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
border_color = Color(0, 0, 0, 1)
border_blend = true
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="Gradient" id="Gradient_lmjpb"]
colors = PackedColorArray(0, 0, 0, 1, 0.309804, 0.32549, 0.333333, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_c444f"]
gradient = SubResource("Gradient_lmjpb")
height = 26
fill_from = Vector2(0.555556, 1)
fill_to = Vector2(0.555556, 0.025641)

[sub_resource type="StyleBoxLine" id="StyleBoxLine_avr02"]
vertical = true

[sub_resource type="StyleBoxLine" id="StyleBoxLine_cv2vp"]
vertical = true

[node name="PaletteDialog" type="Window"]
oversampling_override = 1.0
position = Vector2i(0, 36)
size = Vector2i(1200, 240)
min_size = Vector2i(1200, 240)
script = ExtResource("1_aw083")

[node name="PaletteContainer" type="PanelContainer" parent="."]
unique_name_in_owner = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_quwjl")

[node name="TextureRect" type="TextureRect" parent="PaletteContainer"]
custom_minimum_size = Vector2(0, 26)
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 2
texture = SubResource("GradientTexture2D_c444f")

[node name="MainContainer" type="HBoxContainer" parent="PaletteContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PaletteContainer/MainContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="PaletteContainer/MainContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
texture = SubResource("GradientTexture2D_c444f")

[node name="Label" type="Label" parent="PaletteContainer/MainContainer/VBoxContainer/TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Primary Colors"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PaletteContainer/MainContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PaletteContainer/MainContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Presets..."

[node name="Palette1" type="OptionButton" parent="PaletteContainer/MainContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
mouse_default_cursor_shape = 2
expand_icon = true
script = ExtResource("2_7oefs")

[node name="MarginContainer" type="MarginContainer" parent="PaletteContainer/MainContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="ColorContainer1" type="FlowContainer" parent="PaletteContainer/MainContainer/VBoxContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="PaletteContainer/MainContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PaletteContainer/MainContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Lighten Color:"

[node name="HSlider1a" type="HSlider" parent="PaletteContainer/MainContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
focus_mode = 0
mouse_default_cursor_shape = 2
max_value = 1.0
step = 0.01

[node name="HBoxContainer3" type="HBoxContainer" parent="PaletteContainer/MainContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PaletteContainer/MainContainer/VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Edit Current
Palette:"

[node name="PresetsContainer1" type="HFlowContainer" parent="PaletteContainer/MainContainer/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="VSeparator" type="VSeparator" parent="PaletteContainer/MainContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_styles/separator = SubResource("StyleBoxLine_avr02")

[node name="VBoxContainer2" type="VBoxContainer" parent="PaletteContainer/MainContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="PaletteContainer/MainContainer/VBoxContainer2"]
layout_mode = 2
mouse_filter = 2
texture = SubResource("GradientTexture2D_c444f")

[node name="Label" type="Label" parent="PaletteContainer/MainContainer/VBoxContainer2/TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Secondary  Colors"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PaletteContainer/MainContainer/VBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="PaletteContainer/MainContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
text = "Presets..."

[node name="Palette2" type="OptionButton" parent="PaletteContainer/MainContainer/VBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
mouse_default_cursor_shape = 2
expand_icon = true
script = ExtResource("2_7oefs")

[node name="MarginContainer" type="MarginContainer" parent="PaletteContainer/MainContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="ColorContainer2" type="FlowContainer" parent="PaletteContainer/MainContainer/VBoxContainer2/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="PaletteContainer/MainContainer/VBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="PaletteContainer/MainContainer/VBoxContainer2/HBoxContainer2"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Lighten Color:"

[node name="HSlider2a" type="HSlider" parent="PaletteContainer/MainContainer/VBoxContainer2/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
focus_mode = 0
mouse_default_cursor_shape = 2
max_value = 1.0
step = 0.01

[node name="HBoxContainer3" type="HBoxContainer" parent="PaletteContainer/MainContainer/VBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="PaletteContainer/MainContainer/VBoxContainer2/HBoxContainer3"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Edit Current
Palette:"

[node name="PresetsContainer2" type="HFlowContainer" parent="PaletteContainer/MainContainer/VBoxContainer2/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="VSeparator2" type="VSeparator" parent="PaletteContainer/MainContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_styles/separator = SubResource("StyleBoxLine_cv2vp")

[node name="VBoxContainer3" type="VBoxContainer" parent="PaletteContainer/MainContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="PaletteContainer/MainContainer/VBoxContainer3"]
layout_mode = 2
mouse_filter = 2
texture = SubResource("GradientTexture2D_c444f")

[node name="Label" type="Label" parent="PaletteContainer/MainContainer/VBoxContainer3/TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Tertiary  Colors"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PaletteContainer/MainContainer/VBoxContainer3"]
layout_mode = 2

[node name="Label" type="Label" parent="PaletteContainer/MainContainer/VBoxContainer3/HBoxContainer"]
layout_mode = 2
text = "Presets..."

[node name="Palette3" type="OptionButton" parent="PaletteContainer/MainContainer/VBoxContainer3/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
mouse_default_cursor_shape = 2
expand_icon = true
script = ExtResource("2_7oefs")

[node name="MarginContainer" type="MarginContainer" parent="PaletteContainer/MainContainer/VBoxContainer3"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="ColorContainer3" type="FlowContainer" parent="PaletteContainer/MainContainer/VBoxContainer3/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="PaletteContainer/MainContainer/VBoxContainer3"]
layout_mode = 2

[node name="Label" type="Label" parent="PaletteContainer/MainContainer/VBoxContainer3/HBoxContainer2"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Lighten Color:"

[node name="HSlider3a" type="HSlider" parent="PaletteContainer/MainContainer/VBoxContainer3/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
focus_mode = 0
mouse_default_cursor_shape = 2
max_value = 1.0
step = 0.01

[node name="HBoxContainer3" type="HBoxContainer" parent="PaletteContainer/MainContainer/VBoxContainer3"]
layout_mode = 2

[node name="Label" type="Label" parent="PaletteContainer/MainContainer/VBoxContainer3/HBoxContainer3"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Edit Current
Palette:"

[node name="PresetsContainer3" type="HFlowContainer" parent="PaletteContainer/MainContainer/VBoxContainer3/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[connection signal="item_selected" from="PaletteContainer/MainContainer/VBoxContainer/HBoxContainer/Palette1" to="." method="_on_all_colors_in_palette_item_selected" binds= [0]]
[connection signal="value_changed" from="PaletteContainer/MainContainer/VBoxContainer/HBoxContainer2/HSlider1a" to="." method="_on_h_slider_1a_value_changed"]
[connection signal="item_selected" from="PaletteContainer/MainContainer/VBoxContainer2/HBoxContainer/Palette2" to="." method="_on_all_colors_in_palette_item_selected" binds= [1]]
[connection signal="value_changed" from="PaletteContainer/MainContainer/VBoxContainer2/HBoxContainer2/HSlider2a" to="." method="_on_h_slider_2a_value_changed"]
[connection signal="item_selected" from="PaletteContainer/MainContainer/VBoxContainer3/HBoxContainer/Palette3" to="." method="_on_all_colors_in_palette_item_selected" binds= [2]]
[connection signal="value_changed" from="PaletteContainer/MainContainer/VBoxContainer3/HBoxContainer2/HSlider3a" to="." method="_on_h_slider_3a_value_changed"]
